kubernetes/api/base/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
spec:
  ingressClassName: nginx
  rules:
    - host: ""
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 80
            path: /
